--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   },
   "homepage": "https://github.com/IKIGAI-Studios/IDQ#readme",
   "dependencies": {
-    "bcrypt": "5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "ejs": "3.1.9",
     "express": "4.18.2",
-    "mongoose": "7.4.3"
+    "mongoose": "7.4.3",
+    "qrcode": "1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
