--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "test": "\t"
+    "start": "NODE_ENV=production node src/index.js",
+    "start:watch": "NODE_ENV=development nodemon src/index.js"
   },
   "repository": {
     "type": "git",
