--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/IKIGAI-Studios/IDQ#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "ejs": "3.1.9",
