--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "homepage": "https://github.com/IKIGAI-Studios/IDQ#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "ejs": "3.1.9",
     "express": "4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "7.4.3",
     "qrcode": "1.5.3"
   },
